# finops-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/finops_mcp/: __init__.py  errors.py  models.py  server.py
src/finops_mcp/providers/: base.py
src/finops_mcp/providers/aws/: __init__.py  cost.py  idle.py  provider.py
src/finops_mcp/providers/azure/: __init__.py  cost.py  credentials.py  idle.py  provider.py  tenant.py
