[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-mcp"
version = "0.1.0"
description = "Cross-cloud FinOps MCP server — finds waste, drafts the fix."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "finops", "azure", "aws", "gcp", "cloud", "cost", "kubernetes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Systems Administration",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    # Azure
    "azure-identity>=1.17",
    "azure-mgmt-costmanagement>=4.0",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-resource>=23.0",
    # AWS
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
finops-mcp = "finops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finops_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
